chore: update hero hero quote cover image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="hero-visual">
           <div class="hero-photo primary-photo">
-            <img src="hero-qute.png" alt="Inspirational fitness quote" />
+            <img src="hero-quote-cover.jpg" alt="Inspirational fitness quote" />
           </div>
           <div class="hero-photo overlay-photo">
             <img src="coach-profile.jpg" alt="Coach portrait" />
