feat: restyle hero section to match figma

--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
           </div>
         </div>
         <div class="hero-visual">
-          <div class="hero-photo primary-photo">
-            <img src="hero-quote-cover.jpg" alt="Inspirational fitness quote" />
-          </div>
-          <div class="hero-photo overlay-photo">
+          <div class="hero-card">
             <img src="coach-profile.jpg" alt="Coach portrait" />
           </div>
         </div>
@@ -74,7 +71,7 @@
     <section id="about" class="about">
       <div class="container about-grid">
         <div class="about-photo">
-          <img src="coach-profile.jpg" alt="Coach portrait" />
+          <img src="meet-coach.jpg" alt="Coach portrait" />
         </div>
         <div class="about-content">
           <p class="eyebrow">Meet Your Coach</p>
